# Inventory-agent

./: .gitignore  DESIGN.md  README.md  api.py  main.py  orchestrator.py  pyproject.toml  setup.sh
agents/: __init__.py  aggressive.py  base.py  conservative.py  mediator.py  mock.py
data/: __init__.py  inventory.py
static/: index.html
