[project]
name = "inventory-agent"
version = "0.1.0"
description = "Multi-agent inventory reorder decision system"
authors = [{name = "Kruthin"}]
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "data"]
